--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                                             <p>Facebook: <span><a href="https://www.facebook.com/tksdo.04">Tran Thanh Do</a></span></p>
                                         </div>
                                         <div class="info-item padd-15">
-                                            <p>Email: <span><a href="mailto:trthanhdo41@gmail.com">trthanhdo41@gmail.com</a></span></p>
+                                            <p>Email: <span><a href="mailto:trdo1309@gmail.com">trdo1309@gmail.com</a></span></p>
                                         </div>
                                         <div class="info-item padd-15">
                                             <p>Phone: <span>0888889805</span></p>
@@ -329,7 +329,7 @@
                                 <i class="fa fa-envelope"></i>
                             </div>
                             <h4>Email: </h4>
-                            <p>trthanhdo41@gmail.com</p>
+                            <p>trdo1309@gmail.com</p>
                         </div>
                         <div class="contact-info-item padd-15">
                             <div class="icon">
