--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                                     <h3 style="color:red;">Skills:</h3>
                                     <div class="row">
                                         <div class="skill-item padd-15" style="margin-bottom: 0px;">
-                                            <h5>• <strong>Programming Languages:</strong> <span style="font-weight: normal;">Java, OOP.</span></h5>
+                                            <h5>• <strong>Programming Languages:</strong> <span style="font-weight: normal;">Java.</span></h5>
                                         </div>
                                         <div class="skill-item padd-15" style="margin-bottom: 0px;"><h5>• <strong>Frameworks and Technologies:</strong> <span style="font-weight: normal;">Spring Boot (Spring Core, Spring MVC, Spring Data JPA, Spring Security, Thymeleaf), Hibernate, JPA Repository, JSP Servlet.</span></h5>
                                         </div>
