--- a/index.html
+++ b/index.html
@@ -40,8 +40,7 @@
                         <div class="home-info padd-15">
                             <h3 class="hello">Hello, my name is <span class="name">Tran Thanh Do</span></h3>
                             <h3 class="my-profession">I'm a <span class="typing">student, Java Backend Developer.</span></h3>
-                            <p>As a third-year Software Technology student at UEF, I aim to become a Java Backend intern specializing in Spring Boot. I focus on system
-                                optimization, security, and database management, contributing to real projects and learning from colleagues.</p>
+                            <p>Energetic and detail-oriented third-year Software Technology student at UEF, specializing in Java Backend development with a focus on Spring Boot. Proven ability to develop robust backend systems, manage databases, and ensure system security. Seeking an internship opportunity to apply my skills and gain further industry experience.</p>
                             <a href="#about" data-section-index="0" class="btn about-me-btn">More About me</a>
                         </div>
                         <div class="home-img padd-15">
