--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <div class="row">
                                 <div class="about-text padd-15">
                                     <h3>I'm Tran Thanh Do and <span>Java Backend Developer</span>, <span>Web Developer</span></h3>
-                                    <p>As a third-year Software Technology student at UEF, I aim to become a Java Backend intern specializing in Spring Boot. I focus on system optimization, security, and database management, contributing to real projects and learning from colleagues.</p>
+                                    <p>Energetic and detail-oriented third-year Software Technology student at UEF, specializing in Java Backend development with a focus on Spring Boot. Proven ability to develop robust backend systems, manage databases, and ensure system security. Seeking an internship opportunity to apply my skills and gain further industry experience.</p>
                                 </div>
                             </div>
                             <div class="row">
