--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
                                         <div class="skill-item padd-15" style="margin-bottom: 0px;">
                                             <h5>• <strong>Languages:</strong> <span style="font-weight: normal;">English (ability to read, understand documents, communicate well).</span></h5>
                                         </div>
+                                        <div class="skill-item padd-15" style="margin-bottom: 0px;">
+                                            <h5>• <strong>Soft Skills:</strong> <span style="font-weight: normal;">Teamwork, Problem-solving, Time management, Communication.</span></h5>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
